#98 added cloud9 working space support

--- a/bibigrid-core/src/main/resources/playbook/roles/master/templates/cloud9/cloud9.service.j2
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/templates/cloud9/cloud9.service.j2
@@ -12,7 +12,7 @@
 
 NAME="cloud9"
 PATH="/usr/local/sbin:/usr/local/bin:/sbin:/bin:/usr/sbin:/usr/bin"
-C9_WORKING_DIR=/home/ubuntu/
+C9_WORKING_DIR={{ ide_workspace }}
 
 # Include functions
 set -e
