--- a/resources/playbook/roles/bibigrid/templates/wireguard/wg0.jinja
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/wg0.jinja
@@ -2,7 +2,7 @@
 # This node's ipv4: {{ public_ip.ansible_facts.ipify_public_ip }}
 
 [Interface]
-Address = 10.0.0.1/24
+Address = 10.0.0.{{1 if inventory_hostname in groups['master'] else groups['vpnwkrs'].index(inventory_hostname) +2}}/24
 PrivateKey = {{ wireguard.private_key }}
 ListenPort = 51820
 
