--- a/resources/playbook/roles/bibigrid/templates/wireguard/wg0.jinja
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/wg0.jinja
@@ -1,18 +1,20 @@
-# Config Master node Bielefeld
+{% set this_peer = wireguard.peers|selectattr("ip", "==", public_ip.ansible_facts.ipify_public_ip)|first %}
+# Config Master node {{ this_peer.name }}
 # This node's ipv4: {{ public_ip.ansible_facts.ipify_public_ip }}
 
 [Interface]
 Address = 10.0.0.{{1 if inventory_hostname in groups['master'] else groups['vpnwkrs'].index(inventory_hostname) +2}}/24
-PrivateKey = {{ wireguard.private_key }}
+PrivateKey = {{ this_peer.private_key }}
+
 ListenPort = 51820
 
 # For every vpn but self
 {% for peer in wireguard.peers %}
-{% if peer.remote_vpn_ip != public_ip.ansible_facts.ipify_public_ip %}
+{% if peer.ip != this_peer.ip %}  # don't want to be own peer
 [Peer]  # {{ peer.name }}
-PublicKey = {{ wireguard.public_key }}
+PublicKey = {{ peer.public_key }}
 AllowedIPs = 10.0.0.0/24, {{peer.subnet}}
-Endpoint = {{ peer.remote_vpn_ip }}:51820
+Endpoint = {{ peer.ip }}:51820
 {% endif %}
 {% endfor %}
 
