added some defaults

--- a/resources/playbook/roles/bibigrid/templates/wireguard/network.jinja
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/network.jinja
@@ -2,4 +2,4 @@
 Name=wg0
 
 [Network]
-Address=10.0.0.{{1 if inventory_hostname in groups['master'] else groups['vpnwkrs'].index(inventory_hostname) +2}}/{{ wireguard.mask_bits }}
+Address=10.0.0.{{1 if inventory_hostname in groups['master'] else groups['vpnwkrs'].index(inventory_hostname) +2}}/{{ wireguard.mask_bits|default(24) }}
