--- a/resources/playbook/roles/bibigrid/templates/wireguard/device.jinja
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/device.jinja
@@ -17,8 +17,8 @@ ListenPort = {{ wireguard.listen_port|default(51820) }}
  # {{ peer.name }}
 [WireGuardPeer]
 PublicKey = {{ peer.public_key }}
-AllowedIPs = 10.0.0.0/{{ wireguard.mask_bits }}, {{peer.subnet}}
-Endpoint = {{ peer.ip }}:{{ wireguard.listen_port }}
+AllowedIPs = 10.0.0.0/{{ wireguard.mask_bits|default(51820) }}, {{peer.subnet}}
+Endpoint = {{ peer.ip }}:{{ wireguard.listen_port|default(24) }}
 {% endif %}
 {% endfor %}
 
