--- a/resources/playbook/roles/bibigrid/templates/zabbix/zabbix_agentd.conf.j2
+++ b/resources/playbook/roles/bibigrid/templates/zabbix/zabbix_agentd.conf.j2
@@ -98,7 +98,7 @@ LogFileSize=0
 {% if 'master' in group_names %}
 Server=127.0.0.1
 {% else %}
-Server={{ master.floating_ip }}
+Server={{ instances.master.floating_ip }}
 {% endif %}
 
 ### Option: ListenPort
@@ -146,7 +146,7 @@ ListenIP={{ ansible_default_ipv4.address }}
 # Default:
 # ServerActive=
 
-ServerActive={{ master.floating_ip }}
+ServerActive={{ instances.master.floating_ip }}
 
 ### Option: Hostname
 #	Unique, case sensitive hostname.
