--- a/resources/playbook/roles/bibigrid/templates/dns/resolv.conf.j2
+++ b/resources/playbook/roles/bibigrid/templates/dns/resolv.conf.j2
@@ -1,4 +1,4 @@
 nameserver 127.0.0.1
-{% for ip in dnsserverlist.stdout_lines %}
+{% for ip in dns_server_list %}
 nameserver {{ ip }}
 {% endfor %}
