--- a/resources/playbook/roles/bibigrid/templates/wireguard/network.j2
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/network.j2
@@ -3,3 +3,14 @@ Name=wg0
 
 [Network]
 Address=10.0.0.{{1 if inventory_hostname in groups['master'] else groups['vpnwkrs'].index(inventory_hostname) +2}}/{{ wireguard.mask_bits|default(24) }}
+
+# TODO
+{% if inventory_hostname in groups['master']%}
+[Route]
+Gateway=10.0.0.1
+Destination=192.168.78.0/24
+{% else %}
+[Route]
+Gateway=10.0.0.2
+Destination=192.168.192.0/24
+{% endif %}
