--- a/resources/playbook/roles/bibigrid/templates/dns/dnsmasq.conf.j2
+++ b/resources/playbook/roles/bibigrid/templates/dns/dnsmasq.conf.j2
@@ -4,5 +4,6 @@
 # as the long options legal on the command line. See
 # "/usr/sbin/dnsmasq --help" or "man 8 dnsmasq" for details.
 
+strict-order
 resolv-file=/etc/dnsmasq.resolv.conf
 addn-hosts=/etc/dnsmasq.hosts
