--- a/resources/playbook/roles/bibigrid/templates/bin/bibiname.j2
+++ b/resources/playbook/roles/bibigrid/templates/bin/bibiname.j2
@@ -1,7 +1,7 @@
 #!/bin/bash
 cid={{ cluster_id }}
 if [ "$1" == "m" ]; then
-  name="bibigrid-master-$cid-$2"
+  name="bibigrid-master-$cid"
 elif [ "$1" == "v" ]; then
   name="bibigrid-vpnwkr-$cid-$2"
 elif [ "$1" == "w" ]; then
