changed vpnwkr to vpngtw

--- a/resources/playbook/roles/bibigrid/templates/bin/bibiname.j2
+++ b/resources/playbook/roles/bibigrid/templates/bin/bibiname.j2
@@ -3,7 +3,7 @@ cid={{ cluster_id }}
 if [ "$1" == "m" ]; then
   name="bibigrid-master-$cid"
 elif [ "$1" == "v" ]; then
-  name="bibigrid-vpnwkr-$cid-$2"
+  name="bibigrid-vpngtw-$cid-$2"
 elif [ "$1" == "w" ]; then
   name="bibigrid-worker$2-$cid-$3"
 else
