fixed multiple network is now list causing error bugs.

--- a/resources/playbook/roles/bibigrid/templates/slurm/worker_userdata.j2
+++ b/resources/playbook/roles/bibigrid/templates/slurm/worker_userdata.j2
@@ -5,6 +5,8 @@ bootcmd:
   - /usr/bin/ip route add 10.0.0.0/24 via {{ hostvars[item].private_v4 }} dev ens3
 {% for cluster_cidr in cluster_cidrs %}
 {% if cluster_cidr.cloud_identifier != hostvars[item].cloud_identifier %}
-  - /usr/bin/ip route add {{ cluster_cidr.provider_cidrs }} via {{ hostvars[item].private_v4 }} dev ens3
+{% for provider_cidr in cluster_cidr.provider_cidrs %}
+  - /usr/bin/ip route add {{ provider_cidr }} via {{ hostvars[item].private_v4 }} dev ens3
+{% endfor %}
 {% endif %}
 {% endfor %}
