Hotfix: Hyrbid Cloud (#447)
* fixed rule setting for security groups

* fixed multiple network is now list causing error bugs.

* trying to figure out why route applying only works once.

* Added more echo's for better debugging.

* fixed remaining "subnet list gets handled as a single subnet" bug and finalized multiple routes handling.

--- a/resources/playbook/roles/bibigrid/templates/wireguard/device.j2
+++ b/resources/playbook/roles/bibigrid/templates/wireguard/device.j2
@@ -16,7 +16,7 @@ ListenPort = {{ wireguard_common.listen_port|default(51820) }}
 # {{ peer.name }}
 [WireGuardPeer]
 PublicKey = {{ peer.public_key }}
-AllowedIPs = 10.0.0.0/{{ wireguard_common.mask_bits|default(24) }}, {{peer.subnet}}
+AllowedIPs = 10.0.0.0/{{ wireguard_common.mask_bits|default(24) }}, {{peer.subnets|join(', ')}}
 Endpoint = {{ peer.ip }}:{{ wireguard_common.listen_port|default(51820) }}
 {% endif %}
 {% endfor %}
