disabling ReturnToService for a better way to handle DOWN cloud nodes.

--- a/resources/defaults/slurm/slurm.j2
+++ b/resources/defaults/slurm/slurm.j2
@@ -10,7 +10,7 @@ ClusterName=bibigrid
 
 MpiDefault=none
 ProctrackType=proctrack/cgroup # linuxproc # changed for 23.11.0
-ReturnToService=2
+# ReturnToService=2
 SwitchType=switch/none
 TaskPlugin=task/none
 #TaskPlugin=task/cgroup
