--- a/resources/playbook/roles/bibigrid/templates/theia/package.json.j2
+++ b/resources/playbook/roles/bibigrid/templates/theia/package.json.j2
@@ -1,19 +1,63 @@
 {
   "private": true,
   "dependencies": {
+    "@theia/ai-anthropic": "{{ theia_version }}",
+    "@theia/ai-chat": "{{ theia_version }}",
+    "@theia/ai-chat-ui": "{{ theia_version }}",
+    "@theia/ai-code-completion": "{{ theia_version }}",
+    "@theia/ai-core": "{{ theia_version }}",
+    "@theia/ai-history": "{{ theia_version }}",
+    "@theia/ai-huggingface": "{{ theia_version }}",
+    "@theia/ai-llamafile": "{{ theia_version }}",
+    "@theia/ai-mcp": "{{ theia_version }}",
+    "@theia/ai-ollama": "{{ theia_version }}",
+    "@theia/ai-openai": "{{ theia_version }}",
+    "@theia/ai-scanoss": "{{ theia_version }}",
+    "@theia/ai-terminal": "{{ theia_version }}",
+    "@theia/ai-workspace-agent": "{{ theia_version }}",
+    "@theia/bulk-edit": "{{ theia_version }}",
     "@theia/callhierarchy": "{{ theia_version }}",
+    "@theia/collaboration": "{{ theia_version }}",
+    "@theia/console": "{{ theia_version }}",
+    "@theia/core": "{{ theia_version }}",
+    "@theia/debug": "{{ theia_version }}",
+    "@theia/dev-container": "{{ theia_version }}",
+    "@theia/editor": "{{ theia_version }}",
+    "@theia/editor-preview": "{{ theia_version }}",
+    "@theia/external-terminal": "{{ theia_version }}",
     "@theia/file-search": "{{ theia_version }}",
-    "@theia/git": "{{ theia_version }}",
+    "@theia/filesystem": "{{ theia_version }}",
+    "@theia/getting-started": "{{ theia_version }}",
+    "@theia/keymaps": "{{ theia_version }}",
     "@theia/markers": "{{ theia_version }}",
+    "@theia/memory-inspector": "{{ theia_version }}",
     "@theia/messages": "{{ theia_version }}",
+    "@theia/metrics": "{{ theia_version }}",
+    "@theia/mini-browser": "{{ theia_version }}",
+    "@theia/monaco": "{{ theia_version }}",
     "@theia/navigator": "{{ theia_version }}",
     "@theia/outline-view": "{{ theia_version }}",
+    "@theia/output": "{{ theia_version }}",
+    "@theia/plugin-dev": "{{ theia_version }}",
+    "@theia/plugin-ext": "{{ theia_version }}",
     "@theia/plugin-ext-vscode": "{{ theia_version }}",
     "@theia/preferences": "{{ theia_version }}",
-    "@theia/preview": "{{ theia_version }}",
+    "@theia/process": "{{ theia_version }}",
+    "@theia/property-view": "{{ theia_version }}",
+    "@theia/remote": "{{ theia_version }}",
+    "@theia/scm": "{{ theia_version }}",
     "@theia/search-in-workspace": "{{ theia_version }}",
+    "@theia/secondary-window": "{{ theia_version }}",
+    "@theia/task": "{{ theia_version }}",
     "@theia/terminal": "{{ theia_version }}",
-    "@theia/vsx-registry": "{{ theia_version }}"
+    "@theia/timeline": "{{ theia_version }}",
+    "@theia/toolbar": "{{ theia_version }}",
+    "@theia/typehierarchy": "{{ theia_version }}",
+    "@theia/userstorage": "{{ theia_version }}",
+    "@theia/variable-resolver": "{{ theia_version }}",
+    "@theia/vsx-registry": "{{ theia_version }}",
+    "@theia/workspace": "{{ theia_version }}",
+    "fs-extra": "^9.0.1"
   },
   "devDependencies": {
     "@theia/cli": "{{ theia_version }}"
@@ -21,7 +65,7 @@
   "scripts": {
     "prepare": "yarn run clean && yarn build && yarn run download:plugins",
     "clean": "theia clean",
-    "build": "theia build ",
+    "build": "theia build --app-target=\"browser\"",
     "start": "theia start --plugins=local-dir:plugins",
     "download:plugins": "theia download:plugins"
   },
