--- a/resources/playbook/roles/bibigrid/templates/theia/theia-ide.service.j2
+++ b/resources/playbook/roles/bibigrid/templates/theia/theia-ide.service.j2
@@ -8,7 +8,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User={{ theia_ide_user }}
-ExecStart={{ bibigrid_theia_ide_install_dir }}/theia-ide.sh {{ bibigrid_theia_ide_workspace }} {{ bibigrid_theia_ide_bind_address }} {{ bibigrid_theia_ide_bind_port }}
+ExecStart={{ bibigrid_theia_ide_install_dir }}/theia-ide.sh {{ theia_ide_workspace }} {{ bibigrid_theia_ide_bind_address }} {{ bibigrid_theia_ide_bind_port }}
 
 [Install]
 WantedBy=multi-user.target
