--- a/resources/defaults/slurm/slurm.j2
+++ b/resources/defaults/slurm/slurm.j2
@@ -77,7 +77,7 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 {% set _ = node_groups.append(node.name) %}
 {# MiB to MB #}
 {% set mem = (node.flavor.ram * 1.048576) | int %}
-NodeName={{ node.name }} SocketsPerBoard={{ node.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem }} MemSpecLimit={{ [[mem//32, 2000] | max, 8000] | min }} State={{node.state }} {{"Features=" + (node.features | join(",")) if node.features is defined }}# {{ node.cloud_identifier }}
+NodeName={{ node.name }} SocketsPerBoard={{ node.flavor.vcpus }} CoresPerSocket=1 RealMemory={{ mem }} MemSpecLimit={{ [mem//4 + 1000| max, 8000] | min }} State={{node.state }} {{"Features=" + (node.features | join(",")) if node.features is defined }}# {{ node.cloud_identifier }}
 {% for partition in node.partitions %}
 {% if partition not in partitions %}
 {% set _ = partitions.update({partition: []}) %}
